# FH-ECE20-final

./: CMakeLists.txt  README.rst
sensors/: CMakeLists.txt
tests/: CMakeLists.txt
